PyMaker/datas/object2/RawHTML/Python_DOC_referPages.why-it-keeps-returning-me-theindentationerror-unexpected-indent-and-when-i-pu.txt
<div class="post-text" itemprop="text">
<p>this is my first attempt with python and I'm using the spider enviroment.. I'm trying to execute a very simple code </p>
<pre><code># -*- coding: utf-8 -*-
"""
Spyder Editor

This is a temporary script file.
"""
import numpy as np
 x = np.array([1,2,3])
 y = np.array([4,5,6])
 z= x+y
 print (z)
</code></pre>
<p>When I type this code as a .py file, I get the following error</p>
<pre><code>file x = np.array([1,2,3])
    ^
IndentationError: unexpected indent
</code></pre>
<p>But when i type this code in the console, everything is fine!Why that is happening?</p>
</div>
<div class="post-text" itemprop="text">
<p>All the 5 lines of code you showed have to be at the same indentation level, meaning, you should remove the spaces (or tabs) that are in front of the last 4 lines, or add spaces in front of the first line (the import statement).</p>
<p>You code (with the error):</p>
<pre><code>import numpy as np
 x = np.array([1,2,3])
 y = np.array([4,5,6])
 z= x+y
 print (z)
</code></pre>
<p>But it should look like this (all 5 lines starting at the same position):</p>
<pre><code>import numpy as np
x = np.array([1, 2, 3])
y = np.array([4, 5, 6])
z = x + y
print(z)
</code></pre>
</div>
<span class="comment-copy">seems python is very strict in spaces...  thank you!</span>
<span class="comment-copy">@wannabeadev For Python it is not important how many spaces there are, but there has to be the same amount of spaces for every indentation level. This is so we don't need to use curly brackets <code>{}</code> that other languages like C or Java use to mark blocks</span>
<span class="comment-copy">Feel free to <a href="https://stackoverflow.com/help/someone-answers">accept the answer</a> if it helped you</span>
